Fix horizontal scrolling issue on trusat

--- a/src/App.scss
+++ b/src/App.scss
@@ -100,5 +100,5 @@ button {
 
 
 div {
-  border: 1px solid red !important;
+  // border: 1px solid red !important;
 }
